# src/routes/bikeTypesRouter.js
@@ -1,0 +1,6 @@
+const service = require('../services/bikeTypesService');
+const crud = require('./crud');
+
+module.exports = (router) => {
+  crud(service, router, 'bike-types', 'bikeTypeId');
+};
