# src/routes/deviceStatesHistoryRouter.js
@@ -1,0 +1,6 @@
+const service = require('../services/deviceStatesHistoryService');
+const crud = require('./crud');
+
+module.exports = (router) => {
+  crud(service, router, 'device-states-history', 'deviceStateHistoryId');
+};
